--- a/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.css
+++ b/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.css
@@ -87,9 +87,9 @@
   outline-color: #f94949;
 }
 .persian-date-input .persian-date-wrapper {
-  position: absolute;
+  /*position: absolute;
   right: 0;
-  z-index: 999;
+  z-index: 999;*/
   background: #fff;
   width: 260px;
   direction: rtl;
