--- a/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
+++ b/Codecell.Component.Blazor/Components/PersianDatePickerComponent/PersianDatePicker.razor.scss
@@ -104,9 +104,9 @@
     }
 
     .persian-date-wrapper {
-        position: absolute;
+        /*position: absolute;
         right: 0;
-        z-index: 999;
+        z-index: 999;*/
         background: #fff;
         width: 260px;
         direction: rtl;
