--- a/Codecell.Component.Blazor/Components/PersianDatePickerComponent/MaskInput.razor.scss
+++ b/Codecell.Component.Blazor/Components/PersianDatePickerComponent/MaskInput.razor.scss
@@ -1,11 +1,20 @@
 .persian-date-mask-input {
-    direction: rtl;
     display: flex;
     align-items: center;
+    flex-flow: row-reverse;
 
     input {
         border: 0;
         border-bottom: 1px solid #dcdcdc;
-        width: 40px;
+        width: 45px;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        text-align:center;
+
+        &:focus-visible {
+            outline: none;
+            box-shadow: none;
+        }
     }
 }
